# rust-chat

./: .env.example  Cargo.toml  README.md
src/: jokes.rs  main.rs  private.rs
src/api/: ROUTES.md  chat.rs  health_check.rs  mod.rs
src/api/auth/: delete_user.rs  get_data_user.rs  hello_name.rs  login.rs  mod.rs  patch_user.rs  refresh_tokens.rs  registration.rs
src/auth/: constants.rs  helpers.rs  mod.rs  validation.rs
src/auth/token/: create_token.rs  request_access_token.rs
src/db/: connect_to_db.rs  impl_mondo_db.rs  mod.rs
src/errors/: error_responses.rs
src/models/: hello_response.rs  message_model.rs  mod.rs  tokens.rs  user_model.rs
src/models/request/: login_request.rs  patch_request.rs  refresh_token.rs  registration_request.rs
src/models/response/: public_data_for_user.rs
src/plugins/: PLUGINS.md  mod.rs
src/plugins/chuck_norris/: jokes.rs  mod.rs  models.rs
static/: index.html  script.js
